--- a/views/signup.html
+++ b/views/signup.html
@@ -65,7 +65,7 @@
                 })
                 .catch((err)=>{
                     // console.log(err);
-                    console.log(err.response.data.message);
+                    // console.log(err.response.data.message);
                     p.style.color='red';
                     p.textContent=`${err.response.data.message}`;
                 });
