--- a/views/signup.html
+++ b/views/signup.html
@@ -7,17 +7,18 @@
     <title>Sign Up!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>
-        form{
+        div{
             margin: 0% 20%;
             padding: 2% 5%
         }
         button{
-            margin: 5% 0;
+            margin: 2% 0;
         }
     </style>
 </head>
 <body>
     <h3 class="text-center">Sign up</h3>
+    <div>
     <form id="signup_form">
         <label for="name" class="form-label">Name : </label>
         <input type="text" name="name" id="name" class="form-control">
@@ -29,7 +30,9 @@
         <input type="password" name="password" id="password" class="form-control">
         <button type="submit" class="btn btn-success">Sign up</button>
     </form>
+    <span>Existing User ? </span><a href="./login.html"><button type="button" class="btn btn-primary" id="login">Login</button></a>
     <p id="msg"></p>
+</div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
     <script>
         const myForm = document.getElementById('signup_form');
@@ -60,7 +63,7 @@
                 .then(response=>{
                     p.style.color='green';
                     p.textContent=`${response.data.message}`;
-                    // window.location.replace('../views/login.html');
+                    window.location.replace('../views/login.html');
                     // console.log(response);
                 })
                 .catch((err)=>{
