--- a/views/chat.html
+++ b/views/chat.html
@@ -39,10 +39,40 @@
         <p>You joined</p>
     </div>
     <div class="rounded-top" id="form-div">
-        <form>
-            <input type="text" placeholder="Enter message" class="border border-primary" >
-            <button class="btn btn-sm btn-secondary">Send</button>
+        <form id="chat-form">
+            <input type="text" placeholder="Enter message" id="message" class="border border-primary" >
+            <button type="submit" class="btn btn-sm btn-secondary">Send</button>
         </form>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js" crossorigin="anonymous" ></script>
+    <script>
+        const chatForm = document.getElementById('chat-form');
+        const message = document.getElementById('message');
+        const token = localStorage.getItem('tokenKey');
+
+        chatForm.addEventListener('submit', onSubmit);
+
+        function onSubmit(e){
+            e.preventDefault();
+            if(message.value===''){
+                alert('Enter a message to send');
+            }
+            else{
+                obj={
+                    message:message.value
+                }
+            }
+            axios.post('http://localhost:3000/user/chat', obj, {headers: {"Authorization": token}})
+            .then(response=>{
+                console.log(response);
+                alert(response.data.message);
+            })
+            .catch(err=>{
+                console.log(err);
+            })
+        }
+
+    </script>
 </body>
 </html>
