--- a/views/chat.html
+++ b/views/chat.html
@@ -55,6 +55,7 @@
         const chatDiv = document.getElementById('chat-div');
         const token = localStorage.getItem('tokenKey');
 
+
         window.addEventListener('DOMContentLoaded', ()=>{
             axios.get('http://localhost:3000/user/getchats')
             .then(response=>{
@@ -71,6 +72,9 @@
             .catch(err=>{
                 console.log(err);
             })
+            // setTimeout(()=>{
+            //     location.reload()
+            // }, 5000);
         })
 
         chatForm.addEventListener('submit', onSubmit);
@@ -89,7 +93,7 @@
             .then(response=>{
                 console.log(response);
                 location.reload();
-                // alert(response.data.message);
+                alert(response.data.message);
                
             })
             .catch(err=>{
