--- a/views/creategroup.html
+++ b/views/creategroup.html
@@ -21,9 +21,10 @@
     <script>
         const usersDiv = document.getElementById('users-div');
         const groupForm = document.getElementById('group-form');
+        const token = localStorage.getItem('tokenKey');
 
         window.addEventListener('DOMContentLoaded', ()=>{
-            axios.get('http://localhost:3000/group/getusers')
+            axios.get('http://localhost:3000/group/getusers', {headers: {"Authorization": token}})
             .then(response=>{
                 console.log(response.data.users);
                 let users = response.data.users;
@@ -62,7 +63,7 @@
                 groupname: groupName.value,
                 users: selectedUsers
             }
-            axios.post('http://localhost:3000/group/creategroup', obj)
+            axios.post('http://localhost:3000/group/creategroup', obj, {headers: {"Authorization": token}})
             .then(response=>{
                 console.log(response);
                 window.location.replace('./showgroups.html');
