--- a/views/showgroups.html
+++ b/views/showgroups.html
@@ -10,6 +10,7 @@
         html, body{
             margin: 0%;
             height: 100%;
+            overflow:hidden;
         }
         .group{
             padding: 4% 0;
@@ -64,7 +65,16 @@
     </div>
 
     <div style="width: 70%; float: right;" id="groupchat-div">
-        <h3 id="gc-h3" class="text-center">Group Chat</h3>
+        <h3 id="gc-h3" class="text-center" style="display: inline-block;">Group Chat</h3>
+        <div class="dropdown" style="float: right;">
+            <button class="btn btn-success dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+             Options
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+              <li><a class="dropdown-item" href="#" id="showUsers" >Show Users</a></li>
+              <li><a class="dropdown-item" href="#" id="addUsers">Add Users</a></li>
+            </ul>
+          </div>
         <div id="chat-div">  
 
         </div>
@@ -76,7 +86,7 @@
             </form>
         </div>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js" crossorigin="anonymous" ></script>
     <script>
         const token= localStorage.getItem('tokenKey')
@@ -90,7 +100,7 @@
         window.addEventListener('DOMContentLoaded', ()=>{
             axios.get('http://localhost:3000/user/getgroups', {headers: {"Authorization": token}})
             .then(response=>{
-                console.log(response.data.groups);
+                // console.log(response.data.groups);
                 let groups = response.data.groups;
                 groups.forEach(group => {
                     const div = document.createElement('div');
@@ -99,7 +109,7 @@
                     div.style="cursor: pointer;"
                     div.value=group.id;
                     groupsDiv.appendChild(div);
-                    div.setAttribute("onclick", `getChats(${group.id})`);
+                    div.setAttribute("onclick", `getChats(${group.id}, "${group.name}")`);
                     // div.onclick=getChats(div);
                     // div.addEventListener('click', getChats(group.id));
 
@@ -108,11 +118,15 @@
             .catch(err=>{
                 console.log(err);
             })
+            
         })
 
-        async function getChats(groupId){
+        async function getChats(groupId, groupName){
+            document.getElementById('showUsers').href=`./admin.html?groupid=${groupId}`
+            document.getElementById('addUsers').href=`./admin.html?groupid=${groupId}`
 
             chatDiv.innerHTML="";
+            document.getElementById('gc-h3').innerText= groupName;
             newChatBtn.value=groupId;
 
             let groupchatsArray, lastChatId;
@@ -126,7 +140,7 @@
                 lastChatId = (groupchatsArray[groupchatsArray.length-1]).id;
                 await groupchatsArray.forEach(chat => {
                 let p = document.createElement('p');
-                p.appendChild(document.createTextNode(chat.message));
+                p.appendChild(document.createTextNode(`${chat.username} : ${chat.message}`));
                 chatDiv.appendChild(p);
                 });    
             }
@@ -148,7 +162,7 @@
                     if(chats.length!==0){
                         chats.forEach(chat => {
                         let p = document.createElement('p');
-                        p.appendChild(document.createTextNode(chat.message));
+                        p.appendChild(document.createTextNode(`${chat.username} : ${chat.message}`));
                         chatDiv.appendChild(p);
 
                         if(groupchats!==null||undefined){
@@ -172,7 +186,7 @@
             .catch(err=>{
                 console.log(err);
             })
-        }, 5000);
+        }, 3000);
     }
 
         chatForm.addEventListener('submit', onSendChat);
@@ -190,13 +204,19 @@
             axios.post('http://localhost:3000/group/postchat', obj, {headers: {"Authorization": token}})
             .then(response=>{
                 console.log(response);
+                // location.reload();
             })
             .catch(err=>{
                 console.log(err);
             })
-
         }
 
+        // function showUsers(){
+        //     document.getElementById('showUsers').href=`./admin.html?groupid=${groupId}`
+        // }
+
     </script>
+
+    
 </body>
 </html>
