--- a/views/showgroups.html
+++ b/views/showgroups.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Groups</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- Option 1: Include in HTML -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <style>
         html, body{
             margin: 0%;
@@ -53,9 +52,6 @@
             padding: 0.5% 2%;
             font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
         }
-        /* .groupchats{
-            visibility: hidden;
-        } */
     </style>
 </head>
 <body>
@@ -63,7 +59,6 @@
     <div id="groups">
         <h3 style="display: inline-block;">Groups</h3>
         <a href="./creategroup.html"><button id="create-group" class="btn btn-sm btn-success" style="float: right;">Create Group</button></a>
-
     </div>
 
     <div style="width: 70%; float: right;" id="groupchat-div">
@@ -76,7 +71,7 @@
               <li><a class="dropdown-item" href="#" id="showUsers" >Show Users</a></li>
               <li><a class="dropdown-item" href="#" id="addUsers">Add Users</a></li>
             </ul>
-          </div>
+        </div>
         <div id="chat-div">  
 
         </div>
@@ -91,220 +86,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js" crossorigin="anonymous" ></script>
-    <script src="../socket.io/socket.io.js"></script>
-    <script>
-        const socket = io();
-        const token= localStorage.getItem('tokenKey')
-        const groupsDiv = document.getElementById('groups');
-        const groupdiv = document.getElementById('groupchat-div');
-        const chatDiv = document.getElementById('chat-div');
-        const chatForm = document.getElementById('chat-form');
-        const newChatBtn = document.getElementById('newchatBtn');
-        const newMessage = document.getElementById('message');
-        const newFile = document.getElementById('file');
-
-        window.addEventListener('DOMContentLoaded', ()=>{
-            axios.get('http://localhost:3000/user/getgroups', {headers: {"Authorization": token}})
-            .then(response=>{
-                // console.log(response.data.groups);
-                let groups = response.data.groups;
-                groups.forEach(group => {
-                    const div = document.createElement('div');
-                    div.appendChild(document.createTextNode(`${group.name}`));
-                    div.className="group border-bottom"
-                    div.style="cursor: pointer;"
-                    div.value=group.id;
-                    groupsDiv.appendChild(div);
-                    div.setAttribute("onclick", `getChats(${group.id}, "${group.name}")`);
-                    // div.onclick=getChats(div);
-                    // div.addEventListener('click', getChats(group.id));
-
-                });
-            })
-            .catch(err=>{
-                console.log(err);
-            })
-            
-        })
-
-       
-
-        async function getChats(groupId, groupName){
-
-            socket.emit('joinGroup', groupId);
-
-            document.getElementById('showUsers').href=`./admin.html?groupid=${groupId}`
-            document.getElementById('addUsers').href=`./admin.html?groupid=${groupId}`
-
-            chatDiv.innerHTML="";
-            document.getElementById('gc-h3').innerText= groupName;
-            chatDiv.id=groupId;
-            newChatBtn.value=groupId;
-
-            let groupchatsArray, lastChatId;
-            let groupchats = localStorage.getItem(`groupchats${groupId}`);
-
-            if(groupchats===null){
-                lastChatId=-1;
-            }
-            else{
-                groupchatsArray = JSON.parse(groupchats);
-                lastChatId = (groupchatsArray[groupchatsArray.length-1]).id;
-                await groupchatsArray.forEach(chat => {
-                    let p = document.createElement('p');
-                            if(chat.isUrl){
-                                let a = document.createElement('a');
-                                a.href= chat.message
-                                const date = new Date().toISOString();
-                                a.textContent=`file${date}`;
-                                p.appendChild(document.createTextNode(`${chat.username} : `));
-                                p.appendChild(a);
-                            }
-                            else{
-                                p.appendChild(document.createTextNode(`${chat.username} : ${chat.message}`));
-                            }
-                chatDiv.appendChild(p);
-                });    
-            }
-
-            // setInterval(()=>{
-
-            // console.log(groupdiv);
-            axios.get(`http://localhost:3000/group/getchats?groupid=${groupId}&lastchatid=${lastChatId}`, {headers: {"Authorization": token}})
-            .then(response=>{
-                // console.log(response);
-                groupchats = localStorage.getItem(`groupchats${groupId}`);
-                let chats = response.data.groupChats;
-                    if(chats.length!==0){
-                        chats.forEach(chat => {
-                            let p = document.createElement('p');
-                            if(chat.isUrl){
-                                let a = document.createElement('a');
-                                a.href= chat.message
-                                const date = new Date().toISOString();
-                                a.textContent=`file${date}`;
-                                p.appendChild(document.createTextNode(`${chat.username} : `));
-                                p.appendChild(a);
-                            }
-                            else{
-                                p.appendChild(document.createTextNode(`${chat.username} : ${chat.message}`));
-                            }
-                        chatDiv.appendChild(p);
-                        })
-
-                        if(groupchats===null){
-                            groupchats=JSON.stringify(chats)
-                            console.log('if block=> ', groupchats)
-                        }
-                        else{
-                            groupchatsArray = JSON.parse(groupchats);
-                        
-                            chats.forEach(chat=>{
-                                groupchatsArray.push(chat);
-                            });
-                            groupchats=JSON.stringify(groupchatsArray);
-                            console.log('if block=> ', groupchats);
-                        }
-                        localStorage.setItem(`groupchats${groupId}`, groupchats);   
-                    }                    
-                    // console.log(oldchats);
-                   // console.log(response.data.allChats);
-            })
-            .catch(err=>{
-                console.log(err);
-            })
-            
-            
-        // }, 3000);
-        }
-
-        socket.on('message', data=>{
-            if(chatDiv.id===data.groupId){
-                let p = document.createElement('p');
-                if(data.isUrl){
-                    let a = document.createElement('a');
-                    a.href= data.message
-                    const date = new Date().toISOString();
-                    a.textContent=`file${date}`;
-                    p.appendChild(document.createTextNode(`${data.username} : `));
-                    p.appendChild(a);
-                }
-                else{
-                    p.appendChild(document.createTextNode(`${data.username} : ${data.message}`));
-                }
-                chatDiv.appendChild(p);
-            }
-            // console.log(data); 
-        })
-
-
-        function readFileAsDataURL(file) {
-        return new Promise((resolve, reject) => {
-          const reader = new FileReader();
-          
-          reader.onload = function(event) {
-            resolve(event.target.result);
-          };
-          
-          reader.onerror = function(error) {
-            reject(error);
-          };
-        
-          reader.readAsDataURL(file);
-        });
-      }
-
-        chatForm.addEventListener('submit', onSendChat);
-
-        async function onSendChat(e){
-            e.preventDefault();
-            const groupid = newChatBtn.value;
-            const file = newFile.files[0];
-            
-            const message = newMessage.value
-            let obj = {
-                groupid: groupid,
-            }
-            if(file===undefined){
-                if(message===''){
-                    alert("Enter a message or select a file to Send message!");
-                }
-                else{
-                    obj.message=message;
-                }
-            }
-            else {
-                const filetype = file.type
-                obj.fileUrl=await readFileAsDataURL(file);
-                obj.filetype = filetype;
-                if(message!==''){
-                    obj.message=message;
-                }
-                
-            }
-            
-            // console.log(newChatBtn)
-            console.log(obj);
-            let obj1 ={...obj, token: token};
-
-            socket.emit('newMessage', obj1);
-
-            axios.post('http://localhost:3000/group/postchat', obj, {headers: {"Authorization": token}})
-            .then(response=>{
-                console.log(response);
-                // location.reload();
-            })
-            .catch(err=>{
-                console.log(err);
-            })
-        }
-
-        // function showUsers(){
-        //     document.getElementById('showUsers').href=`./admin.html?groupid=${groupId}`
-        // }
-
-    </script>
-
-    
+    <script src="../socket.io/socket.io.js"></script>   
+    <script src="./showgroups.js"></script> 
 </body>
 </html>
